--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -1,8 +1,13 @@
 ---
-import { Icon } from "astro-icon/components";
-import vgenIcon from "../../assets/vgen.png";
-import { Image } from "astro:assets";
+// @ts-nocheck
+/** biome-ignore-all lint/correctness/noUnusedImports: <-> */
+/** biome-ignore-all assist/source/organizeImports: <-> */
+import SquareXTwitter from "~icons/fa6-brands/square-x-twitter";
+import SquareGithub from "~icons/fa6-brands/square-github";
+import PixivIcon from "~icons/fa6-brands/pixiv";
+import Cubes from "~icons/system-uicons/cubes";
 
+// biome-ignore lint/correctness/noUnusedVariables: <->
 const yearNow = new Date().getFullYear();
 ---
 
@@ -10,28 +15,36 @@ const yearNow = new Date().getFullYear();
   class="flex justify-between items-end gap-2 bg-white shadow-lg shadow-neutral-300 px-14 py-8 rounded-2xl max-w-4xl overflow-hidden text-neutral-500 text-sm"
 >
   <p class="flex flex-col gap-1">
-    <Icon name="system-uicons:cubes" class="text-neutral-400 text-6xl" />
-    <span
-      >Developed with <a
+    <Cubes class="text-neutral-400 text-6xl" />
+    <span>
+      Developed with
+      <a
         href="https://astro.build"
         rel="noopener noreferrer"
         target="_blank"
         class="border-b-2 border-b-neutral-800 hover:border-b-transparent text-neutral-700 text-semibold hover:text-neutral-500 transition-all duration-150"
         >Astro</a
-      >.</span
-    >
+      >.
+    </span>
     <span>
-      Heavily inspired by <a
+      Heavily inspired by
+      <a
         class="border-b-2 border-b-neutral-800 hover:border-b-transparent text-neutral-700 text-semibold hover:text-neutral-500 transition-all duration-150"
         href="https://frosti.saroprock.com"
         rel="noopener noreferrer"
-        target="_blank">Frosti Theme</a
-      >, developed by <a
+        target="_blank"
+      >
+        Frosti Theme
+      </a>
+      , developed by
+      <a
         class="border-b-2 border-b-neutral-800 hover:border-b-transparent text-neutral-700 text-semibold hover:text-neutral-500 transition-all duration-150"
         href="https://github.com/EveSunMaple"
         rel="noopener noreferrer"
-        target="_blank">SunMapple</a
+        target="_blank"
       >
+        SunMapple
+      </a>
     </span>
     <span>
       Copyright <strong>© KisekiMiracle {yearNow}</strong> - All rights reserved.
@@ -43,20 +56,17 @@ const yearNow = new Date().getFullYear();
       <a
         href="https://www.pixiv.net/en/users/110005305"
         rel="noopener noreferrer"
-        target="_blank"
-        ><Icon name="fa6-brands:pixiv" class="w-[28px] h-[28px]" /></a
+        target="_blank"><PixivIcon class="w-[28px] h-[28px]" /></a
       >
       <a
         href="https://x.com/_kiseki_miracle"
         rel="noopener noreferrer"
-        target="_blank"
-        ><Icon name="fa6-brands:x-twitter" class="w-[28px] h-[28px]" /></a
+        target="_blank"><SquareXTwitter class="w-[28px] h-[28px]" /></a
       >
       <a
         href="https://github.com/KisekiMiracle"
         rel="noopener noreferrer"
-        target="_blank"
-        ><Icon name="fa6-brands:github" class="w-[28px] h-[28px]" /></a
+        target="_blank"><SquareGithub class="w-[28px] h-[28px]" /></a
       >
     </span>
   </p>
