--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -45,6 +45,6 @@ export const prerender = false;
           feather.replace();
         });
       </script>
-    </main><!-- <Footer /> -->
+    </main>
   </body>
 </html>
