--- a/src/components/badges/Activity.astro
+++ b/src/components/badges/Activity.astro
@@ -1,11 +1,15 @@
 ---
-import { Icon } from "astro-icon/components";
+// @ts-nocheck
+/** biome-ignore-all lint/correctness/noUnusedImports: <-> */
+/** biome-ignore-all assist/source/organizeImports: <-> */
 
-const { icon, date, title, content } = Astro.props;
+import StashCircleDot from "~icons/stash/circle-dot";
+
+const { date, title, content } = Astro.props;
 ---
 
 <div class="gap-2 grid min-w-64" style="grid-template-columns: auto 1fr;">
-  <Icon name={icon} class="justify-start mt-1 w-[48px] h-[48px] text-blue-700" />
+  <StashCircleDot class="justify-start mt-1 w-[48px] h-[48px] text-blue-700" />
   <div class="flex flex-col gap-1">
     <small class="font-semibold text-neutral-400">{date}</small>
     <h3 class="font-bold text-xl">{title}</h3>
