--- a/src/components/badges/ItemBadge.astro
+++ b/src/components/badges/ItemBadge.astro
@@ -1,5 +1,7 @@
 ---
-import { Icon } from "astro-icon/components";
+// @ts-nocheck
+/** biome-ignore-all lint/correctness/noUnusedImports: <-> */
+/** biome-ignore-all assist/source/organizeImports: <-> */
 const textClr: any = {
   neutral: "text-neutral-700",
   blue: "text-blue-700",
@@ -24,18 +26,11 @@ const BG: any = {
 interface Props {
   title: string;
   content: string;
-  leadingIcon: string;
   color?: string;
   ref?: string;
 }
 
-const {
-  title,
-  content,
-  leadingIcon,
-  color = "neutral",
-  ref = "/blog",
-}: Props = Astro.props;
+const { title, content, color = "neutral", ref = "/blog" }: Props = Astro.props;
 ---
 
 <a
@@ -43,10 +38,11 @@ const {
   style="grid-template-columns: auto 1fr;"
   href={ref}
 >
-  <Icon
-    name={leadingIcon}
+  <div
     class=`p-3 rounded-full w-[54px] h-[54px] ${textClr[color]} ${BG[color]}`
-  />
+  >
+    <slot name="icon" />
+  </div>
   <p class="flex flex-col gap-0.5">
     <span class="font-extrabold text-md text-neutral-700">{title}</span>
     <small class="text-neutral-500">{content}</small>
