--- a/src/components/content/ServiceCard.astro
+++ b/src/components/content/ServiceCard.astro
@@ -2,9 +2,12 @@
 /** biome-ignore-all lint/correctness/noUnusedVariables: <-> */
 /** biome-ignore-all lint/correctness/noUnusedImports: <-> */
 /** biome-ignore-all assist/source/organizeImports: <-> */
+// @ts-nocheck
 
-import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
+
+// Icons
+import MdiArrowRightThin from "~icons/mdi/arrow-right-thin";
 
 const { icon, title, ref, imgArr } = Astro.props;
 ---
@@ -15,16 +18,15 @@ const { icon, title, ref, imgArr } = Astro.props;
 >
   <div class="flex justify-between items-center">
     <div class="flex items-center gap-2">
-      <Icon name={icon} class="text-neutral-700 text-2xl" />
+      <slot name="icon" />
       <h3 class="font-extrabold text-xl">{title}</h3>
     </div>
     <a
       href={ref ?? "/"}
       class="flex items-center self-end gap-0 border-b-2 border-b-blue-400 text-blue-500 whitespace-nowrap"
     >
-      <small class="font-bold text-xs">learn more</small><Icon
-        name="mdi:arrow-right-thin"
-      />
+      <small class="font-bold text-xs">learn more</small>
+      <MdiArrowRightThin />
     </a>
   </div>
   <div class="flex flex-col items-center gap-2">
