--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,9 +1,18 @@
 ---
+// @ts-nocheck
+/** biome-ignore-all lint/correctness/noUnusedImports: <-> */
+/** biome-ignore-all assist/source/organizeImports: <-> */
 import { fade } from "astro:transitions";
 import MainLayout from "../../layouts/MainLayout.astro";
 import BlogPostCard from "../../components/content/BlogPostCard.astro";
 import ItemBadge from "../../components/badges/ItemBadge.astro";
 import coverImg from "../../../src/assets/banner_blog.jpg";
+
+// Icons
+import ArchiveSearchOutline from "~icons/mdi/archive-search-outline";
+import FileSearchOutline from "~icons/mdi/file-search-outline";
+import TagSearchOutline from "~icons/mdi/tag-search-outline";
+import FileFindOutline from "~icons/mdi/file-find-outline";
 
 const blogPosts = Object.values(
   import.meta.glob("./*.{md,mdx}", { eager: true })
@@ -18,29 +27,33 @@ const blogPosts = Object.values(
 >
   <aside slot="extraContent" class="gap-x-4 gap-y-4 grid grid-cols-2">
     <ItemBadge
-      leadingIcon="mdi:archive-search-outline"
       title="Archive"
       content="Browse through articles in a timeline."
       color="pink"
-    />
+    >
+      <ArchiveSearchOutline class="w-8 h-8" slot="icon" />
+    </ItemBadge>
     <ItemBadge
-      leadingIcon="mdi:file-search-outline"
       title="Category"
       content="Filter articles by Categories."
       color="amber"
-    />
+    >
+      <FileSearchOutline class="w-8 h-8" slot="icon" />
+    </ItemBadge>
     <ItemBadge
-      leadingIcon="mdi:tag-search-outline"
       title="Tags"
       content="Explore all the tags used across the site."
       color="green"
-    />
+    >
+      <TagSearchOutline class="w-8 h-8" slot="icon" />
+    </ItemBadge>
     <ItemBadge
-      leadingIcon="mdi:file-find-outline"
       title="Search"
       content="Search articles by keywords."
       color="blue"
-    />
+    >
+      <FileFindOutline class="w-8 h-8" slot="icon" />
+    </ItemBadge>
   </aside>
   <h1 class="font-extrabold text-4xl">The Life of Kiseki</h1>
   <p class="mb-5">
@@ -51,19 +64,25 @@ const blogPosts = Object.values(
   <ul class="flex flex-col gap-4">
     {
       // @ts-expect-error
-      blogPosts.sort((a, b) => Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontmatter.pubDate)).map((post: any) => (
-        <li>
-          <BlogPostCard
-            title={post.frontmatter.title}
-            description={post.frontmatter.description}
-            ref={`/blog/${post.frontmatter.url}/`}
-            imgSrc={post.frontmatter.heroImage}
-            wordCount={post.frontmatter.wordCount}
-            readTime={post.frontmatter.readTime}
-            pubDate={post.frontmatter.pubDate}
-          />
-        </li>
-      ))
+      blogPosts
+        .sort(
+          (a, b) =>
+            Date.parse(b.frontmatter.pubDate) -
+            Date.parse(a.frontmatter.pubDate)
+        )
+        .map((post: any) => (
+          <li>
+            <BlogPostCard
+              title={post.frontmatter.title}
+              description={post.frontmatter.description}
+              ref={`/blog/${post.frontmatter.url}/`}
+              imgSrc={post.frontmatter.heroImage}
+              wordCount={post.frontmatter.wordCount}
+              readTime={post.frontmatter.readTime}
+              pubDate={post.frontmatter.pubDate}
+            />
+          </li>
+        ))
     }
   </ul>
 </MainLayout>
